--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="/pwa-192x192.png">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#00aba9">
+  <link rel="icon" href="./src/assets/meteor-card-icon.ico" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="./src/assets/meteor-card-icon.ico">
+  <link rel="mask-icon" href="./src/assets/meteor-card-icon.ico" color="#00aba9">
 </head>
 <body>
   <div id="app"></div>
